src/AvalanchaParser.java
// Generated from Avalancha.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AvalanchaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, LINE_COMMENT=2, FUN=3, CHECK=4, IMP=5, AND=6, OR=7, NOT=8, TRUE=9, 
		FALSE=10, LPAREN=11, RPAREN=12, COMMA=13, ARROW=14, UNDERSCORE=15, COLON=16, 
		QUESTION=17, BANG=18, EQ=19, LOWERID=20, UPPERID=21;
	public static final int
		RULE_programa = 0, RULE_declaraciones = 1, RULE_chequeos = 2, RULE_declaracion = 3, 
		RULE_chequeo = 4, RULE_signatura = 5, RULE_precondicion = 6, RULE_postcondicion = 7, 
		RULE_listaParametros = 8, RULE_listaParametrosNoVacia = 9, RULE_parametro = 10, 
		RULE_reglas = 11, RULE_regla = 12, RULE_patron = 13, RULE_listaPatrones = 14, 
		RULE_listaPatronesNoVacia = 15, RULE_expresion = 16, RULE_listaExpresiones = 17, 
		RULE_listaExpresionesNoVacia = 18, RULE_formula = 19, RULE_formulaImpOrAndNeg = 20, 
		RULE_formulaOrAndNeg = 21, RULE_formulaAndNeg = 22, RULE_formulaNeg = 23, 
		RULE_formulaAtomica = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaraciones", "chequeos", "declaracion", "chequeo", "signatura", 
			"precondicion", "postcondicion", "listaParametros", "listaParametrosNoVacia", 
			"parametro", "reglas", "regla", "patron", "listaPatrones", "listaPatronesNoVacia", 
			"expresion", "listaExpresiones", "listaExpresionesNoVacia", "formula", 
			"formulaImpOrAndNeg", "formulaOrAndNeg", "formulaAndNeg", "formulaNeg", 
			"formulaAtomica"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'fun'", "'check'", "'imp'", "'and'", "'or'", "'not'", 
			null, null, "'('", "')'", "','", "'->'", "'_'", "':'", "'?'", "'!'", 
			"'=='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "LINE_COMMENT", "FUN", "CHECK", "IMP", "AND", "OR", "NOT", 
			"TRUE", "FALSE", "LPAREN", "RPAREN", "COMMA", "ARROW", "UNDERSCORE", 
			"COLON", "QUESTION", "BANG", "EQ", "LOWERID", "UPPERID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Avalancha.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AvalanchaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public ChequeosContext chequeos() {
			return getRuleContext(ChequeosContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			declaraciones();
			setState(51);
			chequeos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionesContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public DeclaracionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterDeclaraciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitDeclaraciones(this);
		}
	}

	public final DeclaracionesContext declaraciones() throws RecognitionException {
		DeclaracionesContext _localctx = new DeclaracionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaraciones);
		try {
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case CHECK:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case FUN:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				declaracion();
				setState(55);
				declaraciones();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChequeosContext extends ParserRuleContext {
		public ChequeoContext chequeo() {
			return getRuleContext(ChequeoContext.class,0);
		}
		public ChequeosContext chequeos() {
			return getRuleContext(ChequeosContext.class,0);
		}
		public ChequeosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chequeos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterChequeos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitChequeos(this);
		}
	}

	public final ChequeosContext chequeos() throws RecognitionException {
		ChequeosContext _localctx = new ChequeosContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_chequeos);
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case CHECK:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				chequeo();
				setState(61);
				chequeos();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode FUN() { return getToken(AvalanchaParser.FUN, 0); }
		public TerminalNode LOWERID() { return getToken(AvalanchaParser.LOWERID, 0); }
		public SignaturaContext signatura() {
			return getRuleContext(SignaturaContext.class,0);
		}
		public PrecondicionContext precondicion() {
			return getRuleContext(PrecondicionContext.class,0);
		}
		public PostcondicionContext postcondicion() {
			return getRuleContext(PostcondicionContext.class,0);
		}
		public ReglasContext reglas() {
			return getRuleContext(ReglasContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitDeclaracion(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(FUN);
			setState(66);
			match(LOWERID);
			setState(67);
			signatura();
			setState(68);
			precondicion();
			setState(69);
			postcondicion();
			setState(70);
			reglas();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChequeoContext extends ParserRuleContext {
		public TerminalNode CHECK() { return getToken(AvalanchaParser.CHECK, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public ChequeoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chequeo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterChequeo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitChequeo(this);
		}
	}

	public final ChequeoContext chequeo() throws RecognitionException {
		ChequeoContext _localctx = new ChequeoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_chequeo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(CHECK);
			setState(73);
			formula();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignaturaContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(AvalanchaParser.COLON, 0); }
		public ListaParametrosContext listaParametros() {
			return getRuleContext(ListaParametrosContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(AvalanchaParser.ARROW, 0); }
		public ParametroContext parametro() {
			return getRuleContext(ParametroContext.class,0);
		}
		public SignaturaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signatura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterSignatura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitSignatura(this);
		}
	}

	public final SignaturaContext signatura() throws RecognitionException {
		SignaturaContext _localctx = new SignaturaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_signatura);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case FUN:
			case CHECK:
			case ARROW:
			case QUESTION:
			case BANG:
			case LOWERID:
			case UPPERID:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case COLON:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(COLON);
				setState(77);
				listaParametros();
				setState(78);
				match(ARROW);
				setState(79);
				parametro();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrecondicionContext extends ParserRuleContext {
		public TerminalNode QUESTION() { return getToken(AvalanchaParser.QUESTION, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public PrecondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_precondicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterPrecondicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitPrecondicion(this);
		}
	}

	public final PrecondicionContext precondicion() throws RecognitionException {
		PrecondicionContext _localctx = new PrecondicionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_precondicion);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case FUN:
			case CHECK:
			case ARROW:
			case BANG:
			case LOWERID:
			case UPPERID:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case QUESTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(QUESTION);
				setState(85);
				formula();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostcondicionContext extends ParserRuleContext {
		public TerminalNode BANG() { return getToken(AvalanchaParser.BANG, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public PostcondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postcondicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterPostcondicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitPostcondicion(this);
		}
	}

	public final PostcondicionContext postcondicion() throws RecognitionException {
		PostcondicionContext _localctx = new PostcondicionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_postcondicion);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case FUN:
			case CHECK:
			case ARROW:
			case LOWERID:
			case UPPERID:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case BANG:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				match(BANG);
				setState(90);
				formula();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaParametrosContext extends ParserRuleContext {
		public ListaParametrosNoVaciaContext listaParametrosNoVacia() {
			return getRuleContext(ListaParametrosNoVaciaContext.class,0);
		}
		public ListaParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaParametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterListaParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitListaParametros(this);
		}
	}

	public final ListaParametrosContext listaParametros() throws RecognitionException {
		ListaParametrosContext _localctx = new ListaParametrosContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listaParametros);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ARROW:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case UNDERSCORE:
			case LOWERID:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				listaParametrosNoVacia();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaParametrosNoVaciaContext extends ParserRuleContext {
		public ParametroContext parametro() {
			return getRuleContext(ParametroContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(AvalanchaParser.COMMA, 0); }
		public ListaParametrosNoVaciaContext listaParametrosNoVacia() {
			return getRuleContext(ListaParametrosNoVaciaContext.class,0);
		}
		public ListaParametrosNoVaciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaParametrosNoVacia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterListaParametrosNoVacia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitListaParametrosNoVacia(this);
		}
	}

	public final ListaParametrosNoVaciaContext listaParametrosNoVacia() throws RecognitionException {
		ListaParametrosNoVaciaContext _localctx = new ListaParametrosNoVaciaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listaParametrosNoVacia);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				parametro();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				parametro();
				setState(99);
				match(COMMA);
				setState(100);
				listaParametrosNoVacia();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametroContext extends ParserRuleContext {
		public TerminalNode UNDERSCORE() { return getToken(AvalanchaParser.UNDERSCORE, 0); }
		public TerminalNode LOWERID() { return getToken(AvalanchaParser.LOWERID, 0); }
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterParametro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitParametro(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_parametro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_la = _input.LA(1);
			if ( !(_la==UNDERSCORE || _la==LOWERID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReglasContext extends ParserRuleContext {
		public ReglaContext regla() {
			return getRuleContext(ReglaContext.class,0);
		}
		public ReglasContext reglas() {
			return getRuleContext(ReglasContext.class,0);
		}
		public ReglasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reglas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterReglas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitReglas(this);
		}
	}

	public final ReglasContext reglas() throws RecognitionException {
		ReglasContext _localctx = new ReglasContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_reglas);
		try {
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case FUN:
			case CHECK:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case ARROW:
			case LOWERID:
			case UPPERID:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				regla();
				setState(108);
				reglas();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReglaContext extends ParserRuleContext {
		public ListaPatronesContext listaPatrones() {
			return getRuleContext(ListaPatronesContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(AvalanchaParser.ARROW, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public ReglaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regla; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterRegla(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitRegla(this);
		}
	}

	public final ReglaContext regla() throws RecognitionException {
		ReglaContext _localctx = new ReglaContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_regla);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			listaPatrones();
			setState(113);
			match(ARROW);
			setState(114);
			expresion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PatronContext extends ParserRuleContext {
		public TerminalNode UNDERSCORE() { return getToken(AvalanchaParser.UNDERSCORE, 0); }
		public TerminalNode LOWERID() { return getToken(AvalanchaParser.LOWERID, 0); }
		public TerminalNode UPPERID() { return getToken(AvalanchaParser.UPPERID, 0); }
		public TerminalNode LPAREN() { return getToken(AvalanchaParser.LPAREN, 0); }
		public ListaPatronesContext listaPatrones() {
			return getRuleContext(ListaPatronesContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AvalanchaParser.RPAREN, 0); }
		public PatronContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_patron; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterPatron(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitPatron(this);
		}
	}

	public final PatronContext patron() throws RecognitionException {
		PatronContext _localctx = new PatronContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_patron);
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(UNDERSCORE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(LOWERID);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				match(UPPERID);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(119);
				match(UPPERID);
				setState(120);
				match(LPAREN);
				setState(121);
				listaPatrones();
				setState(122);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaPatronesContext extends ParserRuleContext {
		public ListaPatronesNoVaciaContext listaPatronesNoVacia() {
			return getRuleContext(ListaPatronesNoVaciaContext.class,0);
		}
		public ListaPatronesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaPatrones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterListaPatrones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitListaPatrones(this);
		}
	}

	public final ListaPatronesContext listaPatrones() throws RecognitionException {
		ListaPatronesContext _localctx = new ListaPatronesContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_listaPatrones);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RPAREN:
			case ARROW:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case LOWERID:
			case UPPERID:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				listaPatronesNoVacia();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaPatronesNoVaciaContext extends ParserRuleContext {
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(AvalanchaParser.COMMA, 0); }
		public ListaPatronesNoVaciaContext listaPatronesNoVacia() {
			return getRuleContext(ListaPatronesNoVaciaContext.class,0);
		}
		public ListaPatronesNoVaciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaPatronesNoVacia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).enterListaPatronesNoVacia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvalanchaListener ) ((AvalanchaListener)listener).exitListaPatronesNoVacia(this);
		}
	}

	public final ListaPatronesNoVaciaContext listaPatronesNoVacia() throws RecognitionException {
		ListaPatronesNoVaciaContext _localctx = new ListaPatronesNoVaciaContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_listaPatronesNoVacia);
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				expresion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				expresion();
				setState(132);
				match(COMMA);
				setState(133);
				listaPatronesNoVacia();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
